--- a/Assignments/Assignment 3/.vscode/settings.json
+++ b/Assignments/Assignment 3/.vscode/settings.json
@@ -9,7 +9,9 @@
   ],
   "C_Cpp_Runner.enableWarnings": true,
   "C_Cpp_Runner.warningsAsError": false,
-  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.compilerArgs": [
+    "-pthread"
+  ],
   "C_Cpp_Runner.linkerArgs": [],
   "C_Cpp_Runner.includePaths": [],
   "C_Cpp_Runner.includeSearch": [
@@ -23,5 +25,7 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+  ],
+  "C_Cpp_Runner.cCompilerPath": "/bin/gcc",
+  "C_Cpp_Runner.cppCompilerPath": "/bin/g++"
 }
