--- a/Assignments/Assignment 3/Makefile
+++ b/Assignments/Assignment 3/Makefile
@@ -14,7 +14,7 @@ starter:main.cpp main.h message.h
 	g++ main.cpp -o a3w22 -pthread
 
 tar:
-	tar -cvf $(target).tar ($allFiles)
+	tar -cvf $(target).tar $(allFiles)
 	gzip $(target).tar
 
 clean:
