--- a/Assignments/Assignment 4/Makefile
+++ b/Assignments/Assignment 4/Makefile
@@ -1,2 +1,10 @@
+# ------------------------------------------------------------
+# Makefile for CMPUT 379 A4
+#
+# Usage: make  // compile the programs
+#        make tar // create a 'tar.gz' archive of 'allFiles'
+#        make clean // remove unneeded files
+# ------------------------------------------------------------
+#-------------------------------------------------------------
 all:
 	g++ main.cc -o main -lpthread
