--- a/Assignments/Assignment 4/Makefile
+++ b/Assignments/Assignment 4/Makefile
@@ -1,4 +1,4 @@
-# ------------------------------------------------------------
+#-------------------------------------------------------------
 # Makefile for CMPUT 379 A4
 #
 # Usage: make  // compile the programs
@@ -6,5 +6,24 @@
 #        make clean // remove unneeded files
 # ------------------------------------------------------------
 #-------------------------------------------------------------
-all:
-	g++ main.cc -o main -lpthread
+object=a4w22.o
+dataFile=jobs.dat
+monitorTime=100
+NITER=20
+allFiles=Makefile main.cc jobs.dat Report.pdf
+#-------------------------------------------------------------
+a4w22.o:
+	g++ -c main.cc
+
+a4w22:$(object)
+	g++ main.cc -o a4w22 -lpthread
+
+tar:
+	touch ajiitesh-a4.tar.gz
+	tar -czvf ajiitesh-a4.tar.gz $(allFiles)
+
+test1:
+	./a4w22 $(dataFile) $(monitorTime) $(NITER)
+
+clean:
+	rm -rf $(object) a4w22
